# meta_hackathon

./: Dockerfile  README.md  app.py  demo_output.txt  demo_output2.txt  demo_output3.txt  demo_run.py  final_output_highlights.txt  generate_mock_results.py  inference.py  openenv.yaml  output3.txt  pyproject.toml  requirements.txt  results_task_easy.json  results_task_hard.json  results_task_medium.json  runner_demo.py
data/: dataset.json
environment/: __init__.py  env.py  grader.py  models.py  reward.py
environment/tests/: test_reward.py
server/: app.py
