[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-content-moderation"
version = "1.0.0"
description = "A production-grade OpenEnv environment simulating a real-world social media content moderation system."
authors = [
    {name = "Harini23"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "openai>=1.14.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0"
]
